Anonymous | Login | 2021-01-19 02:20 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0031766 | Open CASCADE | [OCCT] OCCT:Modeling Algorithms | public | 2020-09-14 13:58 | 2020-12-02 17:13 | ||||
Reporter | bugmaster | ||||||||
Assigned To | bugmaster | ||||||||
Priority | high | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.4.0 | ||||||||
Target Version | [OCCT] 7.5.0 | Fixed in Version | [OCCT] 7.5.0 | ||||||
Summary | 0031766: Modeling Algorithms - Instability on pipe bugs bug26088 test case | ||||||||
Description | It seems that pipe bugs bug26088 test case executed incorrectly. This is instability. | ||||||||
Steps To Reproduce | pipe bugs bug26088 | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not required | ||||||||
Attached Files | ![]() | ||||||||
![]() |
|
(0094906) git (administrator) 2020-09-16 13:35 |
Branch CR31766 has been created by jgv. SHA-1: 36bb8da027f4311cf19a50ed30f0e67c54343dfa Detailed log of new commits: Author: jgv Date: Mon Sep 14 18:51:50 2020 +0300 0031766: Instability on pipe bugs bug26088 test case Correction in GeomFill_Sweep: set the flags "myExchUV", "isUReversed", "isVReversed" to FALSE (initial state) after failure of BuildKPart method. |
(0094948) jgv (developer) 2020-09-16 21:58 |
Please review the branch CR31766. Branches for integration: OCCT – CR31766 Products – NOT |
(0094951) ifv (developer) 2020-09-17 07:52 |
Seems to be valid Branches for integration: OCCT – CR31766 Products – NOT |
(0095088) bugmaster (administrator) 2020-09-19 17:23 |
Combination - OCCT branch : IR-2020-09-18 master SHA - b0b766826118f74b9857a932b8cec8c52a25c492 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-09-18 SHA - a6486d839da1ba1383ef6cc1a1a446a172f494c7 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17528.97000000011 / 17378.390000000145 [+0.87%] Products Total CPU difference: 12127.32000000009 / 12079.540000000095 [+0.40%] Windows-64-VC14: OCCT Total CPU difference: 18862.703125 / 18898.921875 [-0.19%] Products Total CPU difference: 13314.828125 / 13329.21875 [-0.11%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0095113) git (administrator) 2020-09-20 11:13 |
Branch CR31766 has been deleted by inv. SHA-1: 36bb8da027f4311cf19a50ed30f0e67c54343dfa |
![]() |
|||
occt: master 06f68996
Timestamp: 2020-09-14 15:51:50 Author: jgv Committer: bugmaster [ Details ] [ Diff ] |
0031766: Modeling Algorithms - Instability on pipe bugs bug26088 test case Correction in GeomFill_Sweep: set the flags "myExchUV", "isUReversed", "isVReversed" to FALSE (initial state) after failure of BuildKPart method. |
||
mod - src/GeomFill/GeomFill_Sweep.cxx | [ Diff ] [ File ] | ||
mod - tests/pipe/bugs/bug26088 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2020-09-14 13:58 | bugmaster | New Issue | |
2020-09-14 13:58 | bugmaster | Assigned To | => jgv |
2020-09-14 13:58 | bugmaster | File Added: cr31736_diff (1).png | |
2020-09-14 13:58 | bugmaster | Relationship added | child of 0031736 |
2020-09-14 14:00 | bugmaster | Description Updated | View Revisions |
2020-09-14 14:00 | bugmaster | Status | new => assigned |
2020-09-14 17:29 | jgv | Relationship deleted | child of 0031736 |
2020-09-14 17:30 | jgv | Relationship added | child of 0026088 |
2020-09-15 05:43 | abv | Priority | normal => high |
2020-09-16 13:26 | jgv | Summary | Regression on pipe bugs bug26088 test case on master from 2020-09-11 => Instability on pipe bugs bug26088 test case |
2020-09-16 13:26 | jgv | Description Updated | View Revisions |
2020-09-16 13:26 | jgv | Steps to Reproduce Updated | View Revisions |
2020-09-16 13:35 | git | Note Added: 0094906 | |
2020-09-16 21:58 | jgv | Note Added: 0094948 | |
2020-09-16 21:58 | jgv | Assigned To | jgv => ifv |
2020-09-16 21:58 | jgv | Status | assigned => resolved |
2020-09-17 07:52 | ifv | Note Added: 0094951 | |
2020-09-17 07:52 | ifv | Assigned To | ifv => bugmaster |
2020-09-17 07:52 | ifv | Status | resolved => reviewed |
2020-09-17 18:46 | bugmaster | Summary | Instability on pipe bugs bug26088 test case => Modeling Algorithms - Instability on pipe bugs bug26088 test case |
2020-09-19 15:51 | bugmaster | Test case number | => Not required |
2020-09-19 17:23 | bugmaster | Note Added: 0095088 | |
2020-09-19 17:23 | bugmaster | Status | reviewed => tested |
2020-09-20 10:55 | bugmaster | Changeset attached | => occt master 06f68996 |
2020-09-20 10:55 | bugmaster | Status | tested => verified |
2020-09-20 10:55 | bugmaster | Resolution | open => fixed |
2020-09-20 11:13 | git | Note Added: 0095113 | |
2020-12-02 16:43 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:13 | emo | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |