0031766: Modeling Algorithms - Instability on pipe bugs bug26088 test case

Correction in GeomFill_Sweep: set the flags "myExchUV", "isUReversed", "isVReversed" to FALSE (initial state) after failure of BuildKPart method.